[tool.poetry]
name = "test-library"
version = "0.1.0"
description = "Test a library for import with a different version of pandas"
authors = ["Elise Dubillot <elise.dubillot@syro.co>"]
readme = "README.md"
packages = [
    { include = "test-library" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2"
numpy = ">=1.22.4,<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
